src/main/java/com/example/login_jwt/global/error/exception/AccessDeniedGroupException.java
package com.example.login_jwt.global.error.exception;

public abstract class AccessDeniedGroupException extends RuntimeException{
    public AccessDeniedGroupException(String message) {
        super(message);
    }
}
